@@ -3,7 +3,7 @@
 #
 #   Template makefile for the Common UNIX Printing System (CUPS).
 #
-#   Copyright 1993-2006 by Easy Software Products.
+#   Copyright 1993-2007 by Easy Software Products.
 #
 #   These coded instructions, statements, and computer programs are the
 #   property of Easy Software Products and are protected by Federal
@@ -58,6 +58,7 @@ FILES	=	\
 		job-restart.tmpl \
 		jobs.tmpl \
 		jobs-header.tmpl \
+		list-available-printers.tmpl \
 		maintenance.tmpl \
 		modify-class.tmpl \
 		modify-printer.tmpl \
